# tmux-smart-name

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  pyproject.toml  tmux_window_name.tmux
.github/workflows/: ci.yml  release.yml
Formula/: tmux-smart-name.rb  tmux-window-name.rb
docs/: hooks.md  hooks_CN.md  options.md  options_CN.md
tests/: test_exclusive_paths.py  test_get_program_if_dir.py  test_get_uncommon_path.py  test_icons.py
tmux_window_name/: __init__.py  cli.py
